--- a/exercice 1/index.html
+++ b/exercice 1/index.html
@@ -5,6 +5,16 @@
     <title>Exercice 1</title>
   </head>
   <body>
-      <img src="images/image1.jpg" id="image1"/>
+      <img src="images/image1.jpg" onmouseover="action(this)" onmouseout="noaction(this)" id="image1"/>
   </body>
+  <script type="text/javascript">
+    function action(cible) {
+      cible.style.border = "3px solid red";
+    }
+
+    function noaction(cible) {
+      cible.style.border = "";
+    }
+
+  </script>
 </html>
