--- a/exercice 4/index.html
+++ b/exercice 4/index.html
@@ -6,9 +6,30 @@
 </head>
 <body>
   <form>
-    <label for="motdepasse">Votre mot de passe : </label><input type="text" name="motdepasse" value="" id="motdepasse" />
-    <label for="confirmation">Confirmez : </label><input type="text" name="confirmation" value="" id="confirmation" />
-    <button type="button" name="button" >Vérification</button>
+    <label for="motdepasse">Votre mot de passe : </label><input class="champ" type="text" name="motdepasse" value="" id="motdepasse" />
+    <label for="confirmation">Confirmez : </label><input class="champ" type="text" name="confirmation" value="" id="confirmation" />
+    <button type="button" name="button" onclick="check()" >Vérification</button>
   </form>
+
+  <script type="text/javascript">
+
+    function check() {
+
+      var mdp1 = document.getElementById('motdepasse').value;
+      var mdp2 = document.getElementById('confirmation').value;
+
+      
+
+      if (mdp1 == mdp2) {
+        document.getElementById('motdepasse').style.border = "2px solid #00ff00";
+        document.getElementById('confirmation').style.border = "2px solid #00ff00";
+      }
+      else{
+        document.getElementById('motdepasse').style.border = "2px solid red";
+        document.getElementById('confirmation').style.border = "2px solid red";
+      }
+
+    }
+  </script>
 </body>
 </html>
